# fortudo

./: .babelrc  .eslintignore  .eslintrc.js  .firebaserc  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  AGENTS.md  CLAUDE.md  CONTEXT.md  OPTIMIZATION.md  README.md  ROADMAP.md  firebase.json  index.html  jest.config.cjs  jest.config.js  main.js  package-lock.json  package.json  pyproject.toml  styles.css  tailwind.config.js  test_functional.py  test_gap_indicators.py  test_overlap_warnings.py  test_phase6_e2e.py  test_playwright_preview_smoke.py  test_run_all.py  test_ui_interaction.py  test_visual_inspection.py
.github/: CODEOWNERS  README-CICD.md  README.md  dependabot.yml
__tests__/: activity-app-integration.test.js  activity-app-wiring.test.js  activity-form-layout.test.js  activity-form-utils.test.js  activity-handlers.test.js  activity-insights-intervals.test.js  activity-insights-issues.test.js  activity-insights-model.test.js  activity-insights-renderer.test.js  activity-insights-trends.test.js  activity-manager.test.js  activity-onboarding.test.js  activity-render-options.test.js  activity-renderer.test.js  activity-smoke-hooks.test.js  activity-summary.test.js  activity-timer-ui.test.js  activity-timer.test.js  activity-view-toggle.test.js  add-task-handler.test.js  app-coordinator.test.js  app-lifecycle.test.js  app.test.js  brand-system.test.js  category-colors.test.js  category-form-utils.test.js  category-manager.test.js  clear-tasks-handler.test.js  contract-safety-ui.test.js  custom-css.test.js  document-contract.test.js  entity-id.test.js  (+47 more)
(+221 files in other folders)
